--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
-  "dependencies": {
-    "express": "^4.18.3"
+  "name": "react_refresher",
+  "version": "1.0.0",
+  "description": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "parcel": "^2.12.0"
   }
 }
